--- a/content/page.html
+++ b/content/page.html
@@ -9,13 +9,27 @@
 </head>
 <body>
 <div class="contentWrapper" id="company">
-<h2 class="title">方針</h2>
-<table>
-<tr>
-<th>テスト</th>
-<td>テストテスト</td>
-</tr>
-</table>
+<h2 class="title">株式会社シモキタコイン</h2>
+<p>
+反社会的勢力との関係遮断の基本方針
+</p>
+<p>
+当社は、社会秩序及び健全な企業活動に脅威を与える反社会的勢力による被害を防止するため、以下のとおり反社会的勢力に対する基本方針を定めます。<br>
+</p>
+<p>
+１．当社は、反社会的勢力との一切の関係を遮断します。<br>
+２．当社は、反社会的勢力に対し、組織的かつ適正に対応し、役員及び従業員の安全を確 保します。<br>
+３．当社は、反社会的勢力による不当要求には一切応じず、毅然とした態度で法的対応を 行います。<br>
+４．当社は、反社会的勢力への資金提供や裏取引を行いません。<br>
+５．当社は、反社会的勢力による被害を防止するために、警察、公益財団法人暴力団追放運動推進都民センター、弁護士等の外部専門機関と緊密な連携関係の構築に努めます。
+</p>
+<p>
+以上
+</p>
+<p>
+株式会社シモキタコイン　代表取締役 鎌形 渉<br>
+制定　平成30年4月11日
+</p>
 </div>
 </body>
 </html>
