--- a/content/page.html
+++ b/content/page.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-<div class="contentWrapper" id="company">
+<div class="contentWrapper" id="policy">
 <h2 class="title">株式会社シモキタコイン</h2>
 <table><th>
 反社会的勢力との関係遮断の基本方針
