--- a/content/page.html
+++ b/content/page.html
@@ -13,6 +13,8 @@
 <table><th>
 反社会的勢力との関係遮断の基本方針
 </th>
+</table>
+<table>
 <th>
 <p>
 当社は、社会秩序及び健全な企業活動に脅威を与える反社会的勢力による被害を防止するため、以下のとおり反社会的勢力に対する基本方針を定めます。<br>
