--- a/content/page.html
+++ b/content/page.html
@@ -8,8 +8,10 @@
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-<div class="contentWrapper" id="policy">
+<div class="contentWrapper" id="company">
 <h2 class="title">株式会社シモキタコイン</h2>
+</div>
+<div id="policy">
 <p>
 反社会的勢力との関係遮断の基本方針
 </p>
@@ -30,7 +32,6 @@
 株式会社シモキタコイン　代表取締役 鎌形 渉<br>
 制定　平成30年4月11日
 </p>
-</th></table>
 </div>
 </body>
 </html>
