--- a/content/page.html
+++ b/content/page.html
@@ -11,7 +11,7 @@
 <div class="contentWrapper" id="company">
 <h2 class="title">株式会社シモキタコイン</h2>
 </div>
-<div id="policy">
+<div class="contentWrapper" id="policy">
 <p>
 反社会的勢力との関係遮断の基本方針
 </p>
