--- a/content/policy.html
+++ b/content/policy.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="contentWrapper" id="company">
-<h2 class="title">株式会社シモキタコイン</h2>
+<h2 class="title"><a href="{{ .Site.BaseURL }}" target="_blank">株式会社シモキタコイン</a></h2>
 </div>
 <div class="contentWrapper" id="policy">
 <p>
