--- a/content/policy.html
+++ b/content/policy.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}/images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-<div class="contentWrapper" id="company">
+<div class="contentWrapper">
 <h2 class="title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/skcn_logo.png" alt=""></a></h2>
 </div>
 <div class="contentWrapper" id="policy">
