--- a/content/20180615.html
+++ b/content/20180615.html
@@ -12,10 +12,8 @@
 <h2 class="title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/skcn_logo.png" alt=""></a></h2>
 </div>
 <div class="contentWrapper" id="policy">
-<h2 class="sub">方針</h2>
+<h2 class="sub">【お詫び】「シモキタコイン」発行開始の遅延について</h2>
 <p>
-【お詫び】「シモキタコイン」発行開始の遅延について<br>
-<br>
 パイプドＨＤグループ（東証1部上場＜証券コード3919＞）である、株式会社シモキタコイン（東京都港区、代表取締役社長　鎌形渉）および株式会社アイラブ（東京都世田谷区、代表取締役社長　西山友則、）は、2018年6月に発行開始を予定しておりました、世田谷区下北沢エリアで利用可能な電子地域通貨「シモキタコイン」について、開発進捗および前払式支払手段（第三者型）発行者登録の遅延により発行開始を延期することといたしました。<br>
 <br>
 リリース時期につきましては、年内を目途としておりますが、予定の変更等があった場合には弊社ホームページ上にて適宜ご案内させていただきます。<br>
@@ -27,21 +25,15 @@
 TEL：03-4500-9850<br>
 MAIL：info@shimokitacoin.co.jp<br>
 <table>
-<tbody>
 <tr>
-<td width="326">
-<p><strong>報道関係者様お問合せ先</strong></p>
+<td>
+<p><strong>報道関係者様お問合せ先</strong></p><br>
+パイプドＨＤ株式会社　<a href="https://www.pipedohd.com/">https://www.pipedohd.com/</a><br>
+広報部：久保、宮古<br>
+TEL：03-6744-8039　FAX：03-3585-0620<br>
+E-mail ： <a href="mailto:pr@pipedohd.com">pr@pipedohd.com</a>
 </td>
 </tr>
-<tr>
-<td width="326">
-<p>パイプドＨＤ株式会社　<a href="https://www.pipedohd.com/">https://www.pipedohd.com/</a></p>
-<p>広報部：久保、宮古</p>
-<p>TEL：03-6744-8039　FAX：03-3585-0620</p>
-<p>E-mail ： <a href="mailto:pr@pipedohd.com">pr@pipedohd.com</a></p>
-</td>
-</tr>
-</tbody>
 </table>
 <br>
 　※記載された社名や製品名は各社の商標または登録商標です。<br>
