--- a/content/20180615.html
+++ b/content/20180615.html
@@ -27,8 +27,7 @@ MAIL：info@shimokitacoin.co.jp<br>
 <table>
 <tr>
 <td>
-<p><strong>報道関係者様お問合せ先</strong></p><br>
-<p>
+<p><strong>報道関係者様お問合せ先</strong><br>
 パイプドＨＤ株式会社　<a href="https://www.pipedohd.com/">https://www.pipedohd.com/</a><br>
 広報部：久保、宮古<br>
 TEL：03-6744-8039　FAX：03-3585-0620<br>
@@ -37,10 +36,16 @@ E-mail ： <a href="mailto:pr@pipedohd.com">pr@pipedohd.com</a>
 </td>
 </tr>
 </table>
-<br>
+<table>
+<tr>
+<td>
+<p>
 　※記載された社名や製品名は各社の商標または登録商標です。<br>
-　※内容は発表日現在のものです。予告なしに変更になる場合がありますので、あらかじめご了承ください。<br>
+　※内容は発表日現在のものです。予告なしに変更になる場合がありますので、あらかじめご了承ください。
 </p>
+</td>
+</tr>
+</table>
 </div>
 </body>
 </html>
