--- a/content/20180615.html
+++ b/content/20180615.html
@@ -20,6 +20,10 @@
 <br>
 発行開始をお待ちいただいていたお客様には、ご迷惑をおかけしますことをお詫び申し上げます。<br>
 <br>
+2018年6月15日<br>
+株式会社シモキタコイン<br>
+株式会社アイラブ<br>
+<br>
 ■　本件に関するお問い合わせ先<br>
 株式会社シモキタコイン<br>
 TEL：03-4500-9850<br>
@@ -40,8 +44,8 @@ E-mail ： <a href="mailto:pr@pipedohd.com">pr@pipedohd.com</a>
 <tr>
 <td>
 <p>
-　※記載された社名や製品名は各社の商標または登録商標です。<br>
-　※内容は発表日現在のものです。予告なしに変更になる場合がありますので、あらかじめご了承ください。
+※記載された社名や製品名は各社の商標または登録商標です。<br>
+※内容は発表日現在のものです。予告なしに変更になる場合がありますので、あらかじめご了承ください。
 </p>
 </td>
 </tr>
