--- a/content/20180615.html
+++ b/content/20180615.html
@@ -20,11 +20,11 @@
 <br>
 発行開始をお待ちいただいていたお客様には、ご迷惑をおかけしますことをお詫び申し上げます。<br>
 <br>
-<td align="right">
+<p style="text-align: right">
 2018年6月15日<br>
 株式会社シモキタコイン<br>
 株式会社アイラブ<br>
-</td>
+</p>
 <br>
 ■　本件に関するお問い合わせ先<br>
 株式会社シモキタコイン<br>
