--- a/content/20180615.html
+++ b/content/20180615.html
@@ -11,7 +11,7 @@
 <div class="contentWrapper">
 <h2 class="title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/skcn_logo.png" alt=""></a></h2>
 </div>
-<div class="contentWrapper" id="policy">
+<div class="contentWrapper" id="article">
 <h2 class="sub">【お詫び】「シモキタコイン」発行開始の遅延について</h2>
 <p>
 パイプドＨＤグループ（東証1部上場＜証券コード3919＞）である、株式会社シモキタコイン（東京都港区、代表取締役社長　鎌形渉）および株式会社アイラブ（東京都世田谷区、代表取締役社長　西山友則、）は、2018年6月に発行開始を予定しておりました、世田谷区下北沢エリアで利用可能な電子地域通貨「シモキタコイン」について、開発進捗および前払式支払手段（第三者型）発行者登録の遅延により発行開始を延期することといたしました。<br>
@@ -20,11 +20,9 @@
 <br>
 発行開始をお待ちいただいていたお客様には、ご迷惑をおかけしますことをお詫び申し上げます。<br>
 <br>
-<p style="text-align: right">
 2018年6月15日<br>
 株式会社シモキタコイン<br>
 株式会社アイラブ<br>
-</p>
 <br>
 ■　本件に関するお問い合わせ先<br>
 株式会社シモキタコイン<br>
