--- a/content/20180618.html
+++ b/content/20180618.html
@@ -14,7 +14,7 @@
 <div class="contentWrapper" id="article">
 <h2 class="sub">【お詫び】「シモキタコイン」発行開始の遅延について</h2>
 <p>
-パイプドＨＤグループ（東証1部上場＜証券コード3919＞）である、株式会社シモキタコイン（東京都港区、代表取締役社長　鎌形渉）および株式会社アイラブ（東京都世田谷区、代表取締役社長　西山友則、）は、2018年6月に発行開始を予定しておりました、世田谷区下北沢エリアで利用可能な電子地域通貨「シモキタコイン」について、開発進捗および前払式支払手段（第三者型）発行者登録の遅延により発行開始を延期することといたしました。<br>
+パイプドＨＤグループ（東証1部上場＜証券コード3919＞）である、株式会社シモキタコイン（東京都港区、代表取締役社長　鎌形渉）および株式会社アイラブ（東京都世田谷区、代表取締役社長　西山友則）は、2018年6月に発行開始を予定しておりました、世田谷区下北沢エリアで利用可能な電子地域通貨「シモキタコイン」について、開発進捗および前払式支払手段（第三者型）発行者登録の遅延により発行開始を延期することといたしました。<br>
 <br>
 リリース時期につきましては、年内を目途としておりますが、予定の変更等があった場合には弊社ホームページ上にて適宜ご案内させていただきます。<br>
 <br>
