--- a/content/20180831.html
+++ b/content/20180831.html
@@ -21,11 +21,13 @@
 このたび、法に基づく登録を受けたことで、シモキタコインを前払式支払手段（第三者型）として発行することが可能となりました。下北沢を訪れる人々にシモキタコインを便利に楽しく利用していただける環境を整えるとともに、シモキタコインを通じて、下北沢をより魅力溢れる楽しい街にしてまいります。<br>
 <br>
 <b>■ 前払式支払手段（第三者型）発行者登録内容</b><br>
-・所管：関東財務局<br>
-・登録番号：関東財務局長第00709号<br>
-・登録年月日：2018年8月28日<br>
-・前払式支払手段（第三者型）発行者：株式会社シモキタコイン<br>
-・前払式支払手段（第三者型）の名称：シモキタコイン<br>
+<table>
+<tr><td>所管</td><td>関東財務局</td></tr>
+<tr><td>登録番号</td><td>関東財務局長第00709号</td></tr>
+<tr><td>登録年月日</td><td>2018年8月28日</td></tr>
+<tr><td>前払式支払手段（第三者型）発行者</td><td>株式会社シモキタコイン</td></tr>
+<tr><td>前払式支払手段（第三者型）の名称：シモキタコイン</td></tr>
+</table>
 <br>
 <b>■ 第三者型前払式支払手段について</b><br>
 第三者型前払式支払手段とは、前払式支払手段の発行者以外の第三者から商品の購入やサービスの提供を受ける場合にも、これらの対価の弁済のために使用できる前払式支払手段をいいます。<br>
