--- a/content/20180831.html
+++ b/content/20180831.html
@@ -39,7 +39,7 @@ MAIL：info@shimokitacoin.co.jp<br>
 <tr>
 <td>
 <p><strong>報道関係者様お問合せ先</strong><br>
-パイプドＨＤ株式会社　<a href="https://www.pipedohd.com/">https://www.pipedohd.com/ target="_blank"</a><br>
+パイプドＨＤ株式会社　<a href="https://www.pipedohd.com/">https://www.pipedohd.com/" target="_blank"</a><br>
 広報部：久保、宮古<br>
 TEL：03-6744-8039　FAX：03-3585-0620<br>
 E-mail ： <a href="mailto:pr@pipedohd.com">pr@pipedohd.com</a>
