--- a/content/20180831.html
+++ b/content/20180831.html
@@ -12,24 +12,24 @@
 <h2 class="title"><a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/skcn_logo.png" alt=""></a></h2>
 </div>
 <div class="contentWrapper" id="article">
-<h2 class="sub">前払式支払手段（第三者型）発行者登録完了のお知らせ</h2>
+<h2 class="sub">第三者型前払式支払手段発行者登録完了のお知らせ</h2>
 <p>
-株式会社シモキタコイン（東京都港区、代表取締役社長　鎌形渉）は、2018 年8月28日付にて、金融庁（関東財務局）より、前払式支払手段（第三者型）発行者としての登録（登録番号：関東財務局長第00709号）を受けましたので、お知らせいたします。<br>
+株式会社シモキタコイン（東京都港区、代表取締役社長　鎌形渉、以下「当社」）は、2018 年8月28日付にて、関東財務局長より、第三者型前払式支払手段の発行者（第三者型発行者）としての登録（登録番号：関東財務局長第00709号）を受けましたので、お知らせいたします。<br>
 <br>
 当社は、株式会社エルコイン（東京都港区、代表取締役社長　鎌形渉）が提供する電子地域通貨プラットフォームにおける発行事業者第１号として、主に下北沢で行われるイベントや商業施設、飲食店等で利用できる電子地域通貨シモキタコインの発行を予定しております。併せて、これまで下北沢の商店街では導入のハードルが高かったポイントシステムを低コストで提供することで、地域ぐるみでポイント活用の促進を目指す所存です。<br>
 <br>
-このたび、法に基づく登録を受けたことで、シモキタコインを前払式支払手段（第三者型）として発行することが可能となりました。下北沢を訪れる人々にシモキタコインを便利に楽しく利用していただける環境を整えるとともに、シモキタコインを通じて、下北沢をより魅力溢れる楽しい街にしてまいります。<br>
+このたび、法に基づく登録を受けたことで、シモキタコインを第三者型前払式支払手段として発行することが可能となりました。下北沢を訪れる人々にシモキタコインを便利に楽しく利用していただける環境を整えるとともに、シモキタコインを通じて、下北沢をより魅力溢れる楽しい街にしてまいります。<br>
 <br>
-<b>■ 前払式支払手段（第三者型）発行者登録内容</b><br>
+<b>■ 第三者型発行者登録内容</b><br>
 ・所管：関東財務局<br>
 ・登録番号：関東財務局長第00709号<br>
 ・登録年月日：2018年8月28日<br>
-・前払式支払手段（第三者型）発行者：株式会社シモキタコイン<br>
-・前払式支払手段（第三者型）の名称：シモキタコイン<br>
+・第三者型発行者の名称：株式会社シモキタコイン<br>
+・第三者型前払式支払手段の名称：シモキタコイン<br>
 <br>
 <b>■ 第三者型前払式支払手段について</b><br>
-第三者型前払式支払手段とは、前払式支払手段の発行者以外の第三者から商品の購入やサービスの提供を受ける場合にも、これらの対価の弁済のために使用できる前払式支払手段をいいます。<br>
-「第三者型」は、金融庁の登録を受けた法人のみが、発行業務を行うことができます。<br>
+第三者型前払式支払手段とは、前払式支払手段の発行者以外の第三者から商品の購入やサービスの提供を受ける場合にも、これらの代価の弁済のために使用できる前払式支払手段をいいます。<br>
+第三者型前払式支払手段の発行の業務は、登録を受けた法人でなければ、行ってはならない旨規定されています（資金決済に関する法律第７条）。<br>
 <br>
 <b>■ 本件に関するお問い合わせ先</b><br>
 株式会社シモキタコイン<br>
