--- a/content/20180831.html
+++ b/content/20180831.html
@@ -14,7 +14,7 @@
 <div class="contentWrapper" id="article">
 <h2 class="sub">第三者型前払式支払手段発行者登録完了のお知らせ</h2>
 <p>
-株式会社シモキタコイン（東京都港区、代表取締役社長　鎌形渉、以下「当社」）は、2018 年8月28日付にて、関東財務局長より、第三者型前払式支払手段の発行者（第三者型発行者）としての登録（登録番号：関東財務局長第00709号）を受けましたので、お知らせいたします。<br>
+株式会社シモキタコイン（東京都港区、代表取締役社長　鎌形渉）は、2018 年8月28日付にて、関東財務局長より、第三者型前払式支払手段の発行者（第三者型発行者）としての登録（登録番号：関東財務局長第00709号）を受けましたので、お知らせいたします。<br>
 <br>
 当社は、株式会社エルコイン（東京都港区、代表取締役社長　鎌形渉）が提供する電子地域通貨プラットフォームにおける発行事業者第１号として、主に下北沢で行われるイベントや商業施設、飲食店等で利用できる電子地域通貨シモキタコインの発行を予定しております。併せて、これまで下北沢の商店街では導入のハードルが高かったポイントシステムを低コストで提供することで、地域ぐるみでポイント活用の促進を目指す所存です。<br>
 <br>
