--- a/content/20180927.html
+++ b/content/20180927.html
@@ -67,6 +67,8 @@ E-mail ： <a href="mailto:pr@pipedohd.com">pr@pipedohd.com</a>
 <td>
 <p>
 ※記載された社名や製品名は各社の商標または登録商標です。<br>
+※内容は発表日現在のものです。予告なしに変更になる場合がありますので、あらかじめご了承ください。<br>
+※下北沢カレーフェスティバルは、株式会社アイラブの登録商標です。<br>
 ※内容は発表日現在のものです。予告なしに変更になる場合がありますので、あらかじめご了承ください。
 </p>
 </td>
