--- a/content/20180927.html
+++ b/content/20180927.html
@@ -20,12 +20,12 @@
 <br>
 <b>■１．「シモキタコイン」の概要</b><br>
 　「シモキタコイン」は、主に下北沢で行われるイベントや商業施設、飲食店等で利用できる電子地域通貨です。前払式の支払い手段（プリペイド方式）に対応しているため、株式会社アイラブが提供する地域密着型スマートフォンアプリ「I LOVE 下北沢アプリ」からコインをチャージでき、キャッシュレスで飲食やお買い物が楽しめます。<br>
-　利用者がコインのチャージや決済をすると、加盟店共通で使えるポイントが貯まり、1コイン=1円、1ポイント＝1円として利用できます。<br>
-　加盟店はQRコードの設置のみで導入でき、クレジットカードなど他の電子決済に比べて導入に必要な初期費用や決済手数料を抑えられるため、個人経営の小規模店舗でも手軽に導入することができます。そのため、商店街では導入のハードルが高かったポイントシステムを低コストで導入でき、地域ぐるみでポイント活用を促進して、地域内でお金を循環させる仕組みが作れます。また、加盟店は利用者から支払われた使用済みコインを精算する際、金融機関口座への振込に代えて同額の未使用コインを購入でき、その未使用コインで他の加盟店からの仕入れなどの支払いができてポイントも貯まります。さらに、加盟店は自ら出資する株式会社シモキタコインに対して、利益の分配方針の決定に関与することができ、個人経営の小さな商店でも積極的に地域活性化に寄与できるような仕組みにしています。<br>
+　利用者がコインのチャージや決済をすると、加盟店共通で使えるポイントが貯まり、1コイン1円、1ポイント1円として利用できます。<br>
+　加盟店はQRコードの設置のみで導入でき、クレジットカードなど他の電子決済に比べて導入に必要な初期費用や決済手数料を抑えられるため、個人経営の小規模店舗でも手軽に導入することができます。そのため、商店街では導入のハードルが高かったポイントシステムを低コストで導入でき、地域ぐるみでポイント活用を促進して、地域内でお金を循環させる仕組みが作れます。また、加盟店は利用者から支払われた使用済みコインを精算する際、金融機関口座への振込に代えて同額の未使用コインを購入でき、その未使用コインで他の加盟店からの仕入れなどの支払いができてポイントも貯まります。さらに、「シモキタコイン」を発行・運営する株式会社シモキタコインは、加盟店からの出資を募る予定であり、加盟店が株式会社シモキタコインの株主としての立場から、この企画だけでなく会社経営にも主体的に関与できる枠組とすることで、電子地域通貨「シモキタコイン」の流通促進と地域活性化を目指してまいります。<br>
 　下北沢エリアの商店街と強いつながりを持ち、定期的に下北沢でイベントを開催している株式会社アイラブと、「シモキタコイン」を発行する株式会社シモキタコインが協力することで、飲食や買い物での決済をスムーズにするのはもちろん、加盟店とともに地域一体となり、「シモキタコイン」を活用して何度も訪れたくなる街づくりを目指してまいります。<br>
 <br>
 <b>■２．今後の展望</b><br>
-　様々な業種・業態に加盟店を拡げながら、スマートフォンアプリによる店舗外からの事前注文・決済や、路上ライブの投げ銭など、「シモキタコイン」を利用する新たな取引を創出してまいります。下北沢を訪れる人々に「シモキタコイン」を便利に楽しく利用していただき、下北沢に何度でも訪れたくなるような魅力溢れる街にしてまいります。<br>
+　様々な業種・業態に加盟店を拡げながら、スマートフォンアプリによる店舗外からの事前注文・決済や、路上ライブの投げ銭など、「シモキタコイン」を利用した新たな取引を創出してまいります。下北沢を訪れる人々に「シモキタコイン」を便利に楽しく利用していただき、下北沢に何度でも訪れたくなるような魅力溢れる街にしてまいります。<br>
 <br>
 <b>■３．「I LOVE 下北沢アプリ」とは</b><br>
 　下北沢に溢れるお店やイベント情報をお届けする地域密着型スマートフォンアプリです。特に探し出すことが難しい、入り組んだ路地や隠れ家のようなお店などの奥深い魅力も簡単に見つかります。下北沢で開催する「下北沢カレーフェスティバル®」や、「はしご酒イベントばるばる下北沢」のスタンプラリーも、本アプリからお楽しみいただいています。テイクアウトやベビーカー、喫煙OKの飲食店を検索できるほか、地図表示が可能で迷うことなく目的地に辿り着けます。このたび、電子地域通貨「シモキタコイン」が使えるようになり、キャッシュレス決済にも対応しています。<br>
