--- a/content/20180927.html
+++ b/content/20180927.html
@@ -16,8 +16,8 @@
 <h2 class="sub">〜 加盟店出資スタイルで一体感を醸成。加盟店共通ポイントで再来店を促進 〜</h2>
 <p>
 　パイプドＨＤグループ（東証1部上場＜証券コード3919＞）である、株式会社シモキタコイン（東京都世田谷区、代表取締役社長　鎌形渉）および株式会社アイラブ（東京都世田谷区、代表取締役社長　西山友則）は、世田谷区下北沢エリアで利用可能な電子地域通貨「シモキタコイン」を本日より発行開始いたしました。株式会社シモキタコインが加盟店からの出資を受けて地域通貨事業を運営することで、地域全体に一体感を生み出し、加盟店共通で使えるポイント活用を促進して、地域内でお金を循環させる仕組みづくりを目指します。<br>
-<img src="{{ .Site.BaseURL }}images/image1.png">
-<img src="{{ .Site.BaseURL }}images/image2.png">
+<div align="center"><img src="{{ .Site.BaseURL }}images/image1.png"></dev>
+<div align="center"><img src="{{ .Site.BaseURL }}images/image2.png"></dev>
 <br>
 <b>■１．「シモキタコイン」の概要</b><br>
 　「シモキタコイン」は、主に下北沢で行われるイベントや商業施設、飲食店等で利用できる電子地域通貨です。前払式の支払い手段（プリペイド方式）に対応しているため、株式会社アイラブが提供する地域密着型スマートフォンアプリ「I LOVE 下北沢アプリ」からコインをチャージでき、キャッシュレスで飲食やお買い物が楽しめます。<br>
